--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,6 @@
 
   </div>
 
-<script type="text/javascript" src="js/example.a2f7752ba08ba45f02b9.js"></script><script type="text/javascript" src="js/kofujs.5e9860464a0ceb99788b.js"></script></body>
+<script type="text/javascript" src="js/App.699acd503792eee882b9.js"></script></body>
 
 </html>
